k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-kubernetes-basics-homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: otus-kubernetes-basics-homework-service
            port:
              number: 80
      - path: /otusapp/uriah(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: otus-kubernetes-basics-homework-service
            port:
              number: 80
